assets/css/style.css
.par {
    font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
    color: #777777;
    padding-top: 20px;
    line-height: 180%;
}

.bio, .heading {
    font-family:"Georgia", "Times", "Times New Roman", "serif";
}

.heading {
    position: relative;
    margin-left: 12.5%;
    top: 0px;
    left: 67px;
    float: left;
    background-color: #4aaaa5;
    padding: 22px;
    color: #fff;
    font-size: 28px;
    font-weight: bold;   
}

nav {
    position: relative;
    left: 260px;
    top: 25px;
    float: right;
    color: #000000;
    padding-top: 30px;
    word-spacing: 15px;
}

.main {
    width: 960px;
    background-color: #ffffff;
}

.inside {
    background-color: #ffffff;
    width: 960px;
    height: auto;
    margin-left: 15%;
    color: #4aaaa5;
    padding: 20px 25px 0px 25px;
    border-style: solid;
    border-width: 1px;
    border-color: #4aaaa5;
    font-size: 18px;
    
}

.bio {
    font-size: 28px;
    font-weight: bold;
    /* font-family: "Georgia", "Times", "Times New Roman", "serif"; */
    /* font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif"; */
}

.background {
    background: url("../images/full-bloom.png");
    margin-top: 40px;
    background-position: center;
    border-style: solid;
    border-width: 1px 0px 0px 0px;
    border-color: #4aaaa5;
    height: auto;
}

a {
    color: #777777;
    text-decoration: none;
}

#prof {
    height: 20%;
    width: 20%;
    float: left;
    padding: 20px 20px 20px 0px;

}

/* .par {
    color: #777777;
    padding-top: 20px;
    line-height: 180%;
} */

input {
    width: 100%;
}

#message {
    height: 180px;
    width: 100%;
}

#button {
    width: 10%;
    padding: 5px;
    margin: 5px;
    background-color: #4aaaa5;
    color: #ffffff;
}

.footer {
    background-color: #666666;
    text-align: center;
    padding-top: 35px;
    border-style: solid;
    border-width: 8px 0px 0px 0px;
    border-color: #4aaaa5;
    color: #ffffff;
    /* flex-shrink: 0; */
    /* margin-bottom: 0px;
    margin-top: auto; */
}

.container {
    display: flex;
    justify-content: center;
    justify-content: space-evenly;
    justify-content: space-between;
    flex-flow: row wrap;
    flex-direction: right;
    padding: 20px 0px 40px 0px;
    position: relative;
}

.port {
    border-style: solid;
    border-width: 1px;
}

.item {
    position: relative;
    font-size: 20px;
    color: #ffffff;
    background-color: #4aaaa5;
    bottom: 40px;
    padding: 5px;
    z-index: 2;
    text-align: center;
}

.shrink {
    font-size: 15px;
    padding: 7px;
}

